feat: add default development user
